# RustyCurrency

./: Cargo.toml  README.md
data/: countries.csv
src/: main.rs  tests.rs
